--- a/index.html
+++ b/index.html
@@ -21,3 +21,12 @@
 <script src="js/app.js"></script>
 </body>
   </html>
+<section id="support">
+  <h3>💖 Dukung Azure Manhwa</h3>
+  <p>DANA : <b>085600195762</b></p>
+
+  <button id="btnTraktir">Traktir Sekarang</button>
+</section>
+
+<script src="js/support.js"></script>
+  
