--- a/index.html
+++ b/index.html
@@ -1,32 +1,16 @@
 <!DOCTYPE html>
-<html lang="id">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>Azure Manhwa</title>
-<link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <title>Azure Manhwa</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
+<h1>Azure Manhwa</h1>
 
-<header class="nav">AZURE MANHWA</header>
+<div id="listKomik"></div>
 
-
-<input id="search" placeholder="Cari manhwa..." onkeyup="filterKomik()">
-
-
-<div id="list"></div>
-
-
-<script src="data/komik.js"></script>
-<script src="js/app.js"></script>
+<script src="js/komik.js"></script>
 </body>
-  </html>
-<section id="support">
-  <h3>💖 Dukung Azure Manhwa</h3>
-  <p>DANA : <b>085600195762</b></p>
-
-  <button id="btnTraktir">Traktir Sekarang</button>
-</section>
-
-<script src="js/support.js"></script>
-  
+</html>
